# fibbot

./: .gitignore  Cargo.toml  Dockerfile  README.md  action.yml
.github/workflows/: build.yml
src/: extract.rs  fibbonacci.rs  get_pull.rs  lib.rs  main.rs  pull.rs
