[package]
name = "fibbot"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = "0.4.3"
reqwest = { version = "0.12.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
octocrab="0.43.0"
dotenv="0.15.0"